prevent scrollbar for hidden views

--- a/src/sidebar/MainView/main-view.css
+++ b/src/sidebar/MainView/main-view.css
@@ -9,6 +9,7 @@
 .view-hidden {
     height: 0;
     visibility: hidden;
+    overflow: hidden;
 }
 
 .view-hidden div {
